ENH!: build documentation with Quarto (#233)
* BREAK: export inventory as Markdown instead of HTML
* DOC: remove badges from landing page
* DOC: update CI badge
* DX: remove MyST VSCode configuration
* ENH: add aliases for redirecting
* ENH: always render notebooks, even with output
* ENH: hide redirect warning
* ENH: improve column width ratios
* FIX: remove `EXECUTE_NB` variable check
* FIX: set correct path in software inventory
* FIX: update RTD badge
* MAINT: clean up `.gitignore`
* MAINT: remove `sphinx.configuration`
* MAINT: update lock files

--- a/docs/physics/topics/index.qmd
+++ b/docs/physics/topics/index.qmd
@@ -1,10 +1,14 @@
-# Miscellaneous topics
+---
+title: Miscellaneous topics
+aliases:
+  - topics.html
+---
 
-```{warning}
+:::{.callout-warning}
 These pages are **under development**.
-```
+:::
 
-:::{todo}
+:::{.callout-warning title="To do"}
 
 Other topics (**re-categorize!**)
 
@@ -14,22 +18,11 @@ Other topics (**re-categorize!**)
 - (?) $S$-matrix
 - (?) Spin density
 - Constituent Quark Model
-
   - Asymptotic freedom and color confinement
   - $J^CP(I^G)$
   - Multiplets categorization
   - Importance of experimental data
-
 - Overlapping resonances
 - Coupled channels
 
 :::
-
-```{toctree}
----
-maxdepth: 2
----
-topics/sm
-topics/cqm
-topics/results
-```
